Adding base API service for discovery of current price and timestamp price

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+coincap.baseurl=https://api.coincap.io/v2/assets
+coincap.historyurl=/history?interval=d1&start={0}&end={1}
+coincap.tokensearchurl=?search=
